<resources>
    <string name="app_name">Fifa18Prediction</string>
    <string name="title_activity_login">Sign in</string>

    <string name="login">Login</string>
    <string name="confirmRegister">Register</string>
    <string name="passwordHint">Password</string>
    <string name="emailHint">Email</string>
    <string name="logoDescription">TODO</string>
    <string name="username">Name</string>
    <string name="cancelRegister">Cancel</string>
    <string name="register">Register</string>
    <string name="nav_menu_home">Home</string>
    <string name="nav_menu_results">Results Table</string>
    <string name="nav_menu_sign_out">Sign out</string>
    <string name="nav_header">Header</string>
    <string name="toolbarTitle">Home</string>
    <string name="submit_score">Submit</string>
    <string name="admin">create/update data</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="first_team">first team name</string>
    <string name="second_team">second team name</string>
    <string name="first_score">first team score</string>
    <string name="second_score">second team score</string>
    <string name="match_datetime">yyyy-MM-dd HH:mm</string>

</resources>
